2003-12-02  Richard B. Kreckel  <kreckel@ginac.de>

	* examples/perfnum.cc: update to presumed 40th Mersenne prime.

2003-08-06  Richard Kreckel  <kreckel@ginac.de>

	* src/numtheory/cl_nt_sqrtmodp.cc: #undef _R.
	Reported by Andrew Rechnitzer <A.Rechnitzer@ms.unimelb.edu.au>.

2003-08-01  Richard Kreckel  <kreckel@ginac.de>

	More dependent base resolution issues
	* src/base/hash/cl_hash.h (cl_heap_hashtable<T>::iterator()): 
	portable syntactic simplification.
	* src/base/hash/cl_hashset.h: Preceed inherited members with this->.
	* src/base/hash/cl_hash1.h: Likewise for member functions.
	* src/base/hash/cl_hash2.h: Likewise.
	* src/base/hash/cl_hashuniq.h: Likewise.
	* src/base/hash/cl_hashuniqweak.h: Likewise.
	* src/base/hash/cl_hash.h: Revert explicit static member function
	lookup since that was GCC's fault.
	* src/base/hash/cl_hash2weak.h: Likewise.
	* src/base/hash/cl_hashuniqweak.h: Likewise.

2003-06-29  Richard Kreckel  <kreckel@ginac.de>

	Dependent base resolution needed for GCC-3.4
	* include/cln/GV.h: Preceed inherited members with this->.
	* include/cln/SV.h: Likewise.
	* include/cln/object.h: Likewise.
	* src/base/hash/cl_hash1.h: Likewise.
	* src/base/hash/cl_hash1weak.h: Likewise.
	* src/base/hash/cl_hash2.h: Likewise.
	* src/base/hash/cl_hashuniq.h: Likewise.
	* src/base/hash/cl_hash.h: Make lookup of static member function 
	explicit.
	* src/base/hash/cl_hash2weak.h: Likewise.
	* src/base/hash/cl_hashuniqweak.h: Likewise.
	* src/modinteger/cl_MI.cc: Make shell-comment a C-comment. Geez.

2003-02-24  Bruno Haible  <bruno@clisp.org>

	* src/base/random/cl_random_from.cc (random_state::random_state): Add
	support for MacOS X.
	* src/modinteger/cl_MI.cc: #undef _R.
	Reported by Erann Gat <gat@jpl.nasa.gov>.

2002-08-03  Joerg Arndt  <jj@suse.de>

	* include/cln/config.h.in: Add support for x86_64 CPU.
	* include/cln/modules.h: Likewise.
	* include/cln/types.h: Likewise.
	* include/cln/object.h: Likewise.
